--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
             <p><b>20IT138</b></p>
             <p>CGPA: 9.63</p>
     </div>
+    <a href="./lab2/cv.html">Lab2</a>
 </body>
 </html>
