--- a/lab2/cv.html
+++ b/lab2/cv.html
@@ -7,10 +7,93 @@
     <title>Time-Table</title>
 </head>
 <body>
-    <table "border=1">
-        <tr>HRS</tr>
-        <tr>MON</tr>
-        <tr>TUE</tr>
-    </table>
+    <h2 style="text-align: center;">Time-Table</h2>
+    <table border="1" cellspacing="0" style="text-align:center;margin-left: auto;margin-right: auto;">
+        <tr bgcolor="grey">
+            <th>HRS</th>
+            <th colspan="4">MON</th>
+            <th colspan="4">TUE</th>
+            <th colspan="4">WED</th>
+            <th colspan="4">THU</th>
+            <th colspan="4">FRI</th>
+            <th colspan="4">SAT</th>
+        </tr>
+        <tr>
+            <th bgcolor="grey">09:10<br>to<br>10:10</th>
+            <td colspan="4">COM<br>710<br>PDS</td>
+            <td colspan="4">COM<br>710<br>PDS</td>
+            <td colspan="4">COM<br>710<br>PDS</td>
+            <td colspan="4">COM<br>710<br>PDS</td>
+            <td colspan="4">DSA<br>710<br>PMP</td>
+            <td rowspan="2">A2<br>SGP<br>712-A<br>PDS</td>
+            <td rowspan="2">B2<br>SGP<br>710<br>SBS</td>
+            <td rowspan="2">C2<br>COM<br>718-A<br>RN</td>
+            <td rowspan="2">D2<br>COM<br>718-A<br>BRP</td>    
+        </tr>
+        <tr>
+            <th bgcolor="grey">10:10<br>to<br>11:10</th>
+            <td colspan="4">DBMS<br>710<br>CMG</td>
+            <td colspan="4">SNT<br>710<br>NCP</td>
+            <td colspan="4">SNT<br>710<br>VPN</td>
+            <td colspan="4">SNT<br>710<br>VPN</td>
+            <td colspan="4">SNT<br>710<br>NCP</td>
+        </tr>
+        <tr bgcolor="grey">
+            <th>11:10<br>to<br>12:10</th>
+            <td colspan="24"><strong>BREAK</strong></td>
+        </tr>
+        <tr>
+            <th bgcolor="grey">12:10<br>to<br>1:10</th>
+            <td rowspan="2">A2<br>COM<br>718-A<br>RN</td>
+            <td rowspan="2">B2<br>COM<br>718-A<br>BRP</td>
+            <td rowspan="2">C2<br>DSA<br>713-A<br>PMP</td>
+            <td rowspan="2">D2<br>DBMS<br>713-B<br>CMG</td>
+            <td rowspan="2">A2<br>DBMS<br>712-A<br>NHB</td>
+            <td rowspan="2">B2<br>DSA<br>713-B<br>PMP</td>
+            <td rowspan="2">C2<br>WT<br>711-A<br>RVP</td>
+            <td rowspan="2">D2<br>WT<br>711-B<br>HNY</td>
+            <td rowspan="2">&nbsp;&nbsp;&nbsp;A2&nbsp;&nbsp;&nbsp;<br><br><br></td>
+            <td rowspan="2">B2<br>DBMS<br>713-B<br>NHB</td>
+            <td rowspan="2">C2<br>SGP<br>712-B<br>NAS</td>
+            <td rowspan="2">D2<br>SGP<br>710<br>PMP</td>
+            <td rowspan="2">A2<br>WT<br>712-A<br>JHV</td>
+            <td rowspan="2">B2<br>WT<br>712-B<br>RVP</td>
+            <td rowspan="2">&nbsp;&nbsp;&nbsp;C2&nbsp;&nbsp;&nbsp;<br><br><br></td>
+            <td rowspan="2">D2<br>DSA<br>711-A<br>PMP</td>
+            <td rowspan="2">A2<br>DSA<br>713-A<br>PMP</td>
+            <td rowspan="2">&nbsp;&nbsp;&nbsp;B2&nbsp;&nbsp;&nbsp;<br><br><br></td>
+            <td rowspan="2">C2<br>DBMS<br>711-B<br>CMG</td>
+            <td rowspan="2">&nbsp;&nbsp;&nbsp;D2&nbsp;&nbsp;&nbsp;<br><br><br></td>
+            <td rowspan="2">A2<br>SGP<br>712-A<br>PDS</td>
+            <td rowspan="2">B2<br>SGP<br>710<br>SBS</td>
+            <td rowspan="2">C2<br>COM<br>718-A<br>RN</td>
+            <td rowspan="2">D2<br>COM<br>718-A<br>BRP</td>
+        </tr>
+        <tr>
+            <th bgcolor="grey">1:10<br>to<br>2:10</th>
+        </tr>
+        <tr bgcolor="grey">
+            <th>2:10<br>to<br>2:20</th>
+            <td colspan="24"><strong>BREAK</strong></td>
+        </tr>
+        <tr>
+            <th bgcolor="grey">2:20<br>to<br>3:20</th>
+            <td colspan="4">HS<br>710<br>BK</td>
+            <td colspan="4">DSA<br>710<br>PMP</td>
+            <td colspan="4">DSA<br>710<br>PMP</td>
+            <td colspan="4">DSA<br>710<br>PMP</td>
+            <td colspan="4">DBMS<br>710<br>NHB</td>
+            <td colspan="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        <tr>
+            <th bgcolor="grey">3:20<br>to<br>4:20</th>
+            <td colspan="4">HS<br>710<br>BK</td>
+            <td colspan="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td colspan="4">DBMS<br>710<br>CMG</td>
+            <td colspan="4">DBMS<br>710<br>NHB</td>
+            <td colspan="4">DSA<br>710<br>PMP</td>
+            <td colspan="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        </tr>
+        </table>
 </body>
 </html>
