--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <p><b>20IT138</b></p>
             <p>CGPA: 9.63</p>
     </div>
-    <a href="./lab2/cv.html">Lab2</a>
+    <h2>Lab Tasks</h2>
+    <ul>
+        <li><a href="./lab2/cv.html">LAB-2:Time-Table</a></li>
+    </ul>
 </body>
 </html>
