--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <h2>Lab Tasks</h2>
     <ul>
         <li><a href="./lab2/cv.html">LAB-2:Time-Table</a></li>
+        <li><a href="./lab2/Form.html">LAB-2:Form</a></li>
     </ul>
 </body>
 </html>
