--- a/lab2/cv.html
+++ b/lab2/cv.html
@@ -24,7 +24,7 @@
             <td colspan="4">COM<br>710<br>PDS</td>
             <td colspan="4">COM<br>710<br>PDS</td>
             <td colspan="4">COM<br>710<br>PDS</td>
-            <td colspan="4">DSA<br>710<br>PMP</td>
+            <td colspan="4">COM<br>710<br>PDS</td>
             <td rowspan="2">A2<br>SGP<br>712-A<br>PDS</td>
             <td rowspan="2">B2<br>SGP<br>710<br>SBS</td>
             <td rowspan="2">C2<br>COM<br>718-A<br>RN</td>
