--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Vivek</title>
 </head>
 <body>
     <h1>Vivek Shah</h1>
@@ -32,9 +32,56 @@
             <p>CGPA: 9.63</p>
     </div>
     <h2>Lab Tasks</h2>
+    <h4>Lab 2</h4>
     <ul>
-        <li><a href="./lab2/cv.html">LAB-2:Time-Table</a></li>
-        <li><a href="./lab2/Form.html">LAB-2:Form</a></li>
+        <li><a href="./Lab-2/index.html">LAB-2:Time-Table</a></li>
+        <li><a href="./Lab-2/Form.html">LAB-2:Form</a></li>
+    </ul>
+    <h4>Lab 3</h4>
+    <ul>
+        <li><a href="./Lab-3/GYM/index.html">LAB-3:Gym Website</a></li>
+    </ul>
+    <h4>Lab 4</h4>
+    <ul>
+        <li><a href="./LAB-4/layout1.html">LAB-4:Flexbox Layout 1</a></li>
+        <li><a href="./LAB-4/layout2.html">LAB-4:Flexbox Layout 2</a></li>
+        <li><a href="./LAB-4/layout3.html">LAB-4:Flexbox Layout 3</a></li>
+        <li><a href="./LAB-4/layout4.html">LAB-4:Flexbox Layout 4</a></li>
+    </ul>
+    <h4>Lab 5</h4>
+    <ul>
+        <li><a href="./20it138_LAB-5_charusat-clone/index.html">LAB-5:charusat Clone</a></li>
+    </ul>
+    <h4>Lab 6</h4>
+    <ul>
+        <li><a href="./LAB-6/Animation/animation.html">LAB-6:Animation</a></li>
+        <li><a href="./LAB-6/Transistions/charusat_profile.html">LAB-6:Transition</a></li>
+    </ul>
+    <h4>Lab 7</h4>
+    <ul>
+        <li><a href="./LAB-7/index.html">LAB-PRIME NUMBER</a></li>
+        <li><a href="./LAB-7/click_counter.html">LAB-7:Click-Counter</a></li>
+        <li><a href="./LAB-7/odd_even.html">LAB-7: Odd-Even</a></li>
+        <li><a href="./LAB-7/random_bg_color.html">LAB-7:random BackGround color</a></li>
+        <li><a href="./LAB-7/upto_n.html">LAB-7:Upto N</a></li>
+    </ul>
+    <h4>Lab 8</h4>
+    <ul>
+        <li><a href="./LAB-8/index.html">LAB-8:Data-Types In JavaScript</a></li>
+    </ul>
+    <h4>Lab 9</h4>
+    <ul>
+        <li><a href="./LAB-9/20IT138_LAB-9/login.html">LAB-9:Log-In</a></li>
+        <li><a href="./LAB-9/20IT138_LAB-9/ragistration.html">LAB-9:Ragistration</a></li>
+    </ul>
+    <h4>Lab 10</h4>
+    <ul>
+        <li><a href="./20IT138_LAB-10/Regexp Assignment/index.html">LAB-10:Regex in JavaScript</a></li>
+    </ul>
+    <h4>Lab 11</h4>
+    <ul>
+        <li><a href="./LAB-11/Assignment1/index.html">LAB-11:CheckBox Validator</a></li>
+        <li><a href="./LAB-11/Assignment2/index.html">LAB-11:City Information</a></li>
     </ul>
 </body>
 </html>
